@@ -12,6 +12,8 @@ WinMerge 2.13.21
   Improve editing of linefilter regular expressions (#3015416)
   Allow editing context line count in patch creator (#2092180)
   Improve color options organization (#2818451)
+  Add /xq command line switch for closing WinMerge after identical files
+    and not showing message (#2827836)
   Bugfix: Untranslated string ("Merge.rc:nnnn") was displayed 
     in status bar (#3025855)
 
